syntax = "proto3";

package dbmon;

//import "google/protobuf/timestamp.proto";

// A HealthCheck gRPC service
service HealCheck {
    // Ask for all available reports
    rpc Pull(PullRequest) returns (PullReply) {}
}

// Request message to pull data from server
message PullRequest {
    string clusterId = 1;
    int32   nbProbes = 2;
}

// A report holds a cluster's information for a single request to the cluster
message Probe {
    string clusterID = 1;
    string status = 2;
    //google.protobuf.Timestamp timestamp = 3;
    string timestamp = 3;
    repeated int32 len = 4;
    repeated bytes data = 5;
}

// The response message containing all accumulated reports
message PullReply {
    string clusterId = 1;
    repeated Probe probes = 3;
}